--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 .idea
+
+config.yaml
+requirements.yaml
+requirements.tx
